Updated swagger documentation
